--- a/Index.css
+++ b/Index.css
@@ -242,15 +242,14 @@ nav a:hover{
     color: white;
   }
   .specificinfo h3 {
-    font-size: 0.8rem;
+    font-size: 0.5rem;
     padding: 0rem 0rem;
+    font-family:cursive;
     color: white;
-    font-weight: lighter;
-    transition: all 0.75s ease-out;
-    margin-top: 0;
-    font-weight: 600;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-
+    text-emphasis: 50px;
+    font-size: 30px;
+    -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-color: black;
 }
   .specificcard{
     background-image: url("covergoal1.png");
