--- a/Index.css
+++ b/Index.css
@@ -114,6 +114,7 @@ section h2 {
 }
 nav a{
     text-decoration: none;
+    text-transform: uppercase;
 }
 nav a:hover{
     color: rgb(0, 255, 0);
@@ -327,13 +328,10 @@ nav a:hover{
 }
 iframe{
     border-radius: 10px;
-    overflow: hidden;
 }
-
-iframe::-webkit-scrollbar{
-    display: none;
+.specificsectioncontainer{
+    height: 110vh;
 }
-
 
 /* border: 1px dashed cyan;
 border-top: 1px solid cyan;s
