--- a/Index.css
+++ b/Index.css
@@ -13,7 +13,6 @@
 }
 
 body{
-    font-family: Arial, Helvetica, sans-serif;
     animation: start 1s linear 0s;
     scrollbar-color: black;
     scroll-behavior: smooth;
@@ -28,6 +27,7 @@ header{
     background-color: white;
     z-index: 500;
     width: 100%;
+    font-family: Arial, Helvetica, sans-serif;
 }
 nav{
     min-height: 10vh;
@@ -250,6 +250,8 @@ nav a:hover{
     font-weight: 500;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     color: white;
+    -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-color: black;
   }
   .specificinfo h3 {
     font-size: 0.5rem;
@@ -270,6 +272,7 @@ nav a:hover{
     float: left;
     text-decoration: none;
     margin-left: 4rem;
+    margin-top: 10px;
 }
 .backtohome{
     position: absolute;
@@ -338,9 +341,7 @@ nav a:hover{
 iframe{
     border-radius: 10px;
 }
-.specificsectioncontainer{
-    height: 110vh;
-}
+
 #parallax2{
     margin-top: 1100px;
     z-index: 100;
@@ -352,6 +353,20 @@ iframe{
 #parallax1{
     margin-bottom: 2500px;
     position: fixed;
+    font-size: 1rem;
+    margin-left: 100px;
+    margin-right: 100px;
+    text-align: center;
+    letter-spacing: 1px;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+.aboutus_text{
+    font-size: 1rem;
+    margin-left: 100px;
+    margin-right: 100px;
+    text-align: center;
+    letter-spacing: 1px;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 .parallax{
     overflow: hidden;
